# And-CppMD2Viewer

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/tks/cppcgviewer/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/tks/cppmd2viewer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: model-index.json
app/src/main/assets/Shaders/: mqocol.fsh
app/src/main/assets/shaders/: basic.fsh  basic.vsh  mqocol.vsh  mqotex.fsh  texture.fsh  texture.vsh
app/src/main/assets/shaders_/: basic.vsh  mqotex.vsh
app/src/main/cpp/: AppData.h  AssetsData.cpp  AssetsData.h  CG3DCom.cpp  CG3DCom.h  CG3DViewer.cpp  CG3DViewer.h  CMakeLists.txt  CgViewer.cpp  CgViewer.h  GlObj.cpp  GlObj.h  GlobalSpaceObj.h  GlobalSpacePrm.h  Jni.cpp  MatObj.cpp  MatObj.h  MatVec.cpp  MatVec.h  Md2Model.cpp  Md2Model.h  Md2Obj.cpp  Md2Obj.h  Md2Parts.h  ModelInfos.h  Mqo.cpp  ShaderObj.cpp  ShaderObj.h  TexObj.cpp  TexObj.h  native-lib.cpp
app/src/main/cpp/OpenGL/: GLES2.cpp  GLES2.h
app/src/main/cpp/format/: CG3D.cpp  CG3D.h  MQO.cpp  MQO.h  MatVec.h
app/src/main/java/com/tks/cppcgviewer/: MainActivity.java
app/src/main/java/com/tks/cppmd2viewer/: Jni.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/tks/cppcgviewer/: ExampleUnitTest.java
app/src/test/java/com/tks/cppmd2viewer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+2 files in other folders)
